--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,16 @@
 body{
     margin: 0px;
 }
+
+.no-padding-y{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+.font-color-white{
+    color: white;
+}
+
+
 .green-bg-header{
     background-color: rgb(6, 170, 72);
 }
