--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,18 @@ body{
     margin: 0px;
 }
 
+.disp-flex{
+    display: flex;
+    align-items: center;
+}
+
+.no-margin-x{
+    margin: 0px 0px;
+}
+.padding-x{
+    padding: 0px 6px;
+}
+
 .no-padding-y{
     padding-top: 0px;
     padding-bottom: 0px;
@@ -9,6 +21,45 @@ body{
 .font-color-white{
     color: white;
 }
+.item-left{
+    color: black;
+}
+.item-left:hover{
+    color: #1063e0;
+}
+
+.low-opacity{
+    opacity: 0.6;
+}
+
+.low-opacity:hover{
+    opacity: 1;
+}
+
+
+a.nav-link.font-color-white:hover{
+    color: white !important;
+}
+
+
+.ge-txt{
+    font-size: 20px;
+    font-weight: bold;
+    color:white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.brasileirao-txt{
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.search-pos{
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
 
 
 .green-bg-header{
@@ -41,4 +92,17 @@ body{
 
 .sportv{
     color: rgb(8, 5, 58);
+}
+
+.item{
+    border-bottom: 3px solid transparent;
+}
+.item:hover{
+    border-bottom: 0px solid transparent;
+}
+
+ul.navbar-nav.item li:hover{
+    border-bottom: 3px solid transparent;
+    border-color: unset;
+    cursor: pointer;
 }
