--- a/style/style.css
+++ b/style/style.css
@@ -7,13 +7,28 @@ body{
     display: flex;
 }
 
+.font-size-medium{
+    font-size: 20px;
+}
+
+
+.align-center{
+    align-items: center;
+}
 
 /* .margin-x-axis-auto{
     margin: 0px auto;
 } */
-
+ 
+.table>:not(caption)>*>* {
+    box-shadow: none;
+}
 .justify-center{
     justify-content: center;
+}
+
+.height-100-px{
+    height: 100px;
 }
 
 .disp-flex-center{
@@ -55,9 +70,14 @@ a.nav-link.font-color-white:hover{
     color: white !important;
 }
 
+.divider{
+    border-right:2px dotted white;
+    height: 30px;
+}
+
 
 .ge-txt{
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     color:white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -67,6 +87,10 @@ a.nav-link.font-color-white:hover{
     font-size: 25px;
     font-weight: bold;
     text-align: center;
+}
+
+.brasileirao-txt:hover{
+    opacity: 0.7;
 }
 
 .search-pos{
@@ -157,27 +181,26 @@ ul.navbar-nav.item li:hover{
 .table-size{
     width:700px;
 }
-.table{
+/* .table{
     border-spacing: 0px;
-}
+} */
 .table thead tr th{
     
-    height: 36px;
-    border-bottom: 1px #c9c4c4 solid;
+    height: 45px;
     border-top: 1px lightgray solid;
     font-weight: 100;
     text-align: center;
 }
-.table tbody tr td{
+/* .table tbody tr td{
     border-bottom: 1px lightgray solid;
-}
+} */
 .teams{
     text-align: left;
     border-right: 1px #c9c4c4 solid;
 }
-.table tbody tr td:nth-child(odd):not(:first-child){
+ .table tbody tr td:nth-child(odd):not(:first-child){
     background-color: #f5f5f5;;
-}
+} 
 .stadium-name{
     font-family: sans-serif;
     font-size: 12px;
@@ -218,28 +241,41 @@ ul.navbar-nav.item li:hover{
     color: aqua;
 }
 
-.games{
-    width: 100%;
-
-}
 .round-selection-bar-arrow{
     width: 24px;
     height: 30px;
 }
+
+
+
 .round-selection-bar{
-    display: flex;
     font-size: 24px;
     font-weight: bold;
     justify-content: space-around;
     padding-bottom: 4px;
     padding-top: 4px;
-    border-top:1px solid lightgray;
-    border-bottom:1px solid lightgray;
+    flex-direction: row;
+    border-radius: 0px;
 }
+
+.game-info{
+    Color:rgb(6, 170, 72);
+    font-size:16px;
+    font-weight: bold;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+
+.card-body{
+    border-top:1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    
+}
+
 .game{
     display: flex;
     flex-direction: column;
-    margin-top: 5px;
+    margin: 7px 0px;
     border-bottom:1px solid lightgray;
     padding-bottom: 5px;
     height: 95px;
@@ -260,7 +296,7 @@ ul.navbar-nav.item li:hover{
 }
 .playing-team{
     display: flex;
-    padding: 10px;
+    padding: 2px 10px;
     align-items: center;
 }
 .playing-team div{
@@ -300,10 +336,6 @@ ul.navbar-nav.item li:hover{
     };
     .table-box{
         width: 100%
-    }
-    .games{
-        width: 100%;
-
     }
     .table-box{
         width: 90%;
