--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,6 @@ body{
     font-size: 20px;
 }
 
-
 .align-center{
     align-items: center;
 }
@@ -19,7 +18,33 @@ body{
 /* .margin-x-axis-auto{
     margin: 0px auto;
 } */
- 
+
+.search-background{
+    background-color: green;
+    border-radius: 10px;
+}
+
+.search-input{
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+
+.search-input::placeholder{
+    color: white;
+    font-weight: bold;
+}
+
+.search-input:focus{
+    color: transparent;
+    outline: none;
+}
+
+.search-input:focus::placeholder{
+    color: white;
+}
+
+
 .table>:not(caption)>*>* {
     box-shadow: none;
 }
@@ -95,7 +120,6 @@ a.nav-link.font-color-white:hover{
 
 .search-pos{
     justify-content: flex-end;
-    padding-right: 10px;
 }
 
 
@@ -327,7 +351,12 @@ ul.navbar-nav.item li:hover{
 
 }
 
-@media (max-width: 1022px) { 
+@media (max-width: 991.5px) { 
+
+    .flex{
+        display:block;
+    }
+
     .info-box{
         display: block;
     }
