--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,11 @@ body{
     display: flex;
 }
 
+.flex-row{
+    flex-direction: row;
+}
+
+
 .font-size-medium{
     font-size: 20px;
 }
@@ -18,6 +23,10 @@ body{
 /* .margin-x-axis-auto{
     margin: 0px auto;
 } */
+
+.container-right{
+    display: unset;
+}
 
 .search-background{
     background-color: green;
@@ -68,6 +77,16 @@ body{
     padding: 0px 6px;
 }
 
+li.offcanvas-links{
+    font-size: 15px;
+    color: rgb(84, 84, 84);
+    font-family: sans-serif;
+}
+
+.padding-x.flex-row li{
+    padding: 0px 6px;
+}
+
 .no-padding-y{
     padding-top: 0px;
     padding-bottom: 0px;
@@ -97,7 +116,7 @@ a.nav-link.font-color-white:hover{
 
 .divider{
     border-right:2px dotted white;
-    height: 30px;
+    height: 20px;
 }
 
 
@@ -334,20 +353,40 @@ ul.navbar-nav.item li:hover{
 
 @media (max-width:1199px){
     .container-right{
-        display: none;
+        display: none !important;
     }
 
-    .info-box{
-        margin:1%;
-        width: 100%;
-
-    }
     .table-size{
         width: 750px;
     }
 }
 
 @media (max-width:1064px){
+    .shield{
+        display: none;
+    }
+
+    .search-pos{
+        display: flex;
+        justify-content: flex-end;
+    }
+    .search-background{
+        width: 20px;
+        height: 20px;    
+        background-color: unset;                
+    }
+    .menu-txt{
+        display: none;
+    }
+    .search-input{
+        display: none;
+    }
+    .container-left{ 
+        overflow-x: hidden;
+    }
+    .divider{
+        display: none;
+    }
 
 }
 
@@ -356,35 +395,27 @@ ul.navbar-nav.item li:hover{
     .flex{
         display:block;
     }
-
-    .info-box{
-        display: block;
-    }
     .line{
         display: none;
     };
+
     .table-box{
         width: 100%
     }
-    .table-box{
-        width: 90%;
-    }
-    
-    .table-box{
-        padding-right: 0px;
-        width: 100%;
-    }
+
     .in-game{
         justify-content: center;
         font-size: 30px;
         font-family: sans-serif;
     }
+
     img{
         height: 60px;
         width: 60px;
         padding-left: 5px;
         padding-right: 5px;
     }
+
     .table-size{
         width: 950px;
     }
@@ -392,10 +423,3 @@ ul.navbar-nav.item li:hover{
         height: 140px;
     }
 }
-
-@media (max-width:  767px){
-    .table-size{
-        width: 750px;
-    }
- }
-
